--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Git Cloned Web</title>
+  </head>
+  <body>
+    <h1>
+      This is git clone web page which is used to derive the commit changes
+    </h1>
+  </body>
+</html>
